<resources>
    <string name="app_name">GaXeR</string>
    <string name="test" translatable="false">test</string>
    <string name="nothing" translatable="false">Nothing</string>
    <string name="gasbottle" translatable="false">gasbottle</string>
    <string name="battery" translatable="false">battery</string>
    <string name="temp" translatable="false">temp</string>
    <string name="virus" translatable="false">virus</string>
    <string name="nowBattery">%</string>
    <string name="nowTemp">℃</string>
    <string name="ppm">ppm</string>
    <string name="intent_sw">Button</string>
    <string name="starticon">StartICON</string>
    <string name="StatusHint">資料載入中</string>
    <string name="refresh">refresh</string>
    <string name="gasSwitch">閥門</string>
    <string name="devstatus">devStatus</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pswd">密碼</string>
    <string name="acc">帳號</string>
    <string name="login">登入</string>
    <string name="home">首頁</string>
    <string name="addDev">新增裝置</string>
    <string name="setting">設定</string>
    <string name="fragment_home">HomeFragment</string>
    <string name="fragment_setting">SettingFragment</string>
    <string name="fragment_add_dev">AddDevFragment</string>
    <string name="card_app_name">card test</string>
    <string name="all_dev">所有裝置</string>
    <string name="new_group">新增群組</string>
    <string name="free_dev">可用的裝置</string>
    <string name="btn_group">確定新增</string>
    <string name="name_group">群組名稱</string>
    <string name="back">上一頁</string>
    <string name="logo">logo</string>
    <string name="home_text">Hello</string>
    <string name="status">目前一切正常</string>
    <string name="thank">鳴謝</string>
    <string name="on">開</string>
    <string name="off">關</string>
</resources>