<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3FAD689"
    tools:context=".MainActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:padding="9dp">

    </com.github.mikephil.charting.charts.LineChart>

    <ImageButton
        android:id="@+id/imageButtonRefresh"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="20dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/refresh"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/refresh" />

    <TextView
        android:id="@+id/devName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="195dp"
        android:textAlignment="textStart"
        />
    <ImageView
        android:id="@+id/imageGas"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="105dp"
        android:contentDescription="@string/gasbottle"
        app:srcCompat="@drawable/gas" />

    <ImageView
        android:id="@+id/imageDevStatus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/devstatus"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/greenlight" />

    <ImageView
        android:id="@+id/imageBattery"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/battery"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/smartphone_charger" />

    <TextView
        android:id="@+id/nowBattery"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="80dp"
        android:text="@string/nowBattery"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageTemp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/temp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/temperature" />

    <TextView
        android:id="@+id/nowTemp"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="120dp"
        android:gravity="end"
        android:text="@string/nowTemp"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageVirus"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/virus"
        app:srcCompat="@drawable/poison" />

    <TextView
        android:id="@+id/nowGas"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="160dp"
        android:text="@string/ppm"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/gasSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="780dp"
        android:thumb="@drawable/custom_sw_thumb"
        app:track="@drawable/custom_sw_track" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/back_arrow" />

</FrameLayout>