<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGroupActivity">

    <TextView
        android:id="@+id/textViewfreeDev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/free_dev"
        android:textSize="20sp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationbottomView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#ffff"
        app:menu="@menu/menu_navigationbar" />

    <ScrollView
        android:id="@+id/freeDevScrollView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/free_dev"
        android:background="@drawable/horizontal_scroll"
        >

        <LinearLayout
            android:id="@+id/ScrollLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/btn_group"
        android:layout_marginTop="700dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_group" />

    <EditText
        android:id="@+id/editTextGroupname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="640dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_group"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />


</FrameLayout>